# AndroidMath

./: .gitattributes  INTERNAL.md  LICENSE  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
mathdisplaylib/: .gitignore  build.gradle  cdep  cdep.sha256  cdep.yml
mathdisplaylib/doc/: index-outline.html  index.html
mathdisplaylib/doc/alltypes/: index.html
mathdisplaylib/doc/com.agog.mathdisplay.parse/: -n-s-not-found.html  index.html
mathdisplaylib/doc/com.agog.mathdisplay.render/: -d-e-b-u-g.html  change-font.html  get-blackboard.html  get-bold-italic.html  get-bold.html  get-caligraphic.html  get-default-style.html  get-fraktur.html  get-inter-element-space-array-index-for-type.html  get-italicized.html  get-sans-serif.html  get-typewriter.html  greek-symbol-order.html  index.html  inter-element-space-array.html  is_-c-a-p-i-t-a-l_-g-r-e-e-k.html  is_-g-r-e-e-k_-s-y-m-b-o-l.html  is_-l-o-w-e-r_-e-n.html  is_-l-o-w-e-r_-g-r-e-e-k.html  is_-n-u-m-b-e-r.html  is_-u-p-p-e-r_-e-n.html  k-base-line-skip-multiplier.html  k-delimiter-factor.html  k-delimiter-shortfall-points.html  k-jot-multiplier.html  k-line-skip-limit-multiplier.html  k-line-skip-multiplier.html  k-m-t-unicode-greek-capital-bold-italic-start.html  k-m-t-unicode-greek-capital-bold-start.html  k-m-t-unicode-greek-capital-end.html  k-m-t-unicode-greek-capital-italic-start.html  k-m-t-unicode-greek-lower-end.html  (+30 more)
mathdisplaylib/src/main/cpp/: CMakeLists.txt  com_pvporbit_freetype_FreeType.h  com_pvporbit_freetype_Utils.h  freetype_jni.cpp
sampleapp/: build.gradle
(+580 files in other folders)
